src/app/components/element-container/element-container.component.scss
:host {
  display: flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  padding: 2px;
  position: absolute;
  cursor: grab;

  .handle {
    display: none;
    background-color: black;
    position: absolute;
    width: 10px;
    height: 10px;

    &.se {
      bottom: 0;
      clip-path: circle(45%);
      cursor: se-resize;
      right: 0;
      margin-bottom: -5.5px;
      margin-right: -5.5px;
    }

    &.s {
      bottom: 0;
      clip-path: circle(45%);
      cursor: s-resize;
      right: 50%;
      margin-bottom: -5.5px;
    }

    &.e {
      bottom: 50%;
      cursor: e-resize;
      clip-path: circle(45%);
      right: 0;
      margin-right: -5.5px;
    }
  }

  &.selected {
    border: 2px dashed black;

    .handle {
      display: block;
    }
  }
}

